買い物メモ登録処理の繋ぎこみ
