# src/features/shopping/list/routes/index.stories.ts
@@ -35,6 +35,16 @@ const meta: Meta<typeof Component> = {
             ]
           );
         }),
+        http.post('http://localhost:5173/shopping/item/1', async () => {
+          return HttpResponse.json(
+            {
+              id: 1000,
+              category: "necessity",
+              description: "ccc",
+            },
+            {status: 200}
+          )
+        })
       ]
     }
   }
