# src/mocks/openapi.json
@@ -509,14 +509,10 @@
                 "properties": {
                   "category": {
                     "type": "string",
-                    "enum": [
-                      "food",
-                      "necessity"
-                    ],
                     "description": "food または、 necessity\n",
                     "example": "food"
                   },
-                  "name": {
+                  "description": {
                     "type": "string"
                   }
                 }
@@ -526,7 +522,29 @@
         },
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
+                    },
+                    "category": {
+                      "type": "string",
+                      "enum": [
+                        "food",
+                        "necessity"
+                      ]
+                    },
+                    "description": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
           },
           "401": {
             "description": "Authorization information is missing or invalid."
@@ -647,7 +665,14 @@
             "type": "boolean",
             "nullable": false
           }
-        }
+        },
+        "required": [
+          "id",
+          "owner_id",
+          "name",
+          "category",
+          "picked"
+        ]
       },
       "UserBase": {
         "type": "object",
